--- a/UserPanel/templates/UserPanel/userpanel.html
+++ b/UserPanel/templates/UserPanel/userpanel.html
@@ -1,1 +1,11 @@
-<h1>User Panel</h1>
+{% extends 'master.html' %}
+
+{% block title %}User Panel {% endblock %}
+
+{% block content %}
+
+<h1>Welcome {{ user.username }}</h1>
+
+<p><a href="{% url 'logout' %}">logout</a>
+
+{% endblock %}
