--- a/templates/master.html
+++ b/templates/master.html
@@ -3,6 +3,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{% block title %}{% endblock %}</title>
+	{% load static %}
+	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
 </head>
 <body>
 	{% block content %}
