--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,10 +3,15 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Login<h2>
-<form method="post">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<button type="submit">Login</button>
-</form>
+<div class="container">
+	<h2>Login</h2>
+	<form method="post">
+		{% csrf_token %}
+		{{ form.as_p }}
+		<button type="submit">Login</button>
+	</form>
+</div>
+<div class="container">
+	<p>Not a user? <a href="{% url 'register' %}">Sign up!</a></p>
+</div>
 {% endblock %}
